# ftk-imager

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  project.md  pyproject.toml
docs/: ARCHITECTURE.md
packaging/debian/: control  rules
scripts/: forensic-imager
src/core/: imager_core.c
src/forensic_imager/: acquire.py  audit.py  badsectors.py  bundling.py  case_mgmt.py  cli.py  devices.py  doctor.py  encryption.py  extract.py  formats.py  gui.py  hashing.py  memory.py  mounting.py  network.py  preview.py  profiles.py  reporting.py  safety.py  sanitization.py  seal.py  system_state.py  verify_all.py  versioning.py  writeblock.py
tests/: test_audit_chain.py  test_case_mgmt.py  test_case_seal.py  test_cli_audit_parse.py  test_cli_case_bundle_parse.py  test_cli_case_parse.py  test_cli_doctor_parse.py  test_cli_export_parse.py  test_cli_parse.py  test_cli_safety_split_parse.py  test_cli_security_parse.py  test_cli_verify_all_parse.py  test_cli_version_parse.py  test_cli_writeblock_parse.py  test_doctor_has_new_bins.py  test_encryption_utils.py  test_hashfile_parse.py  test_hashing.py
