[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parrot-forensic-imager"
version = "0.17.0"
description = "Forensic imaging toolkit for Parrot OS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
forensic-imager = "forensic_imager.cli:main"
forensic-imager-gui = "forensic_imager.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
